<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/homescreen_marble_background"
    tools:context=".HomeActivity">

    <TextView
        android:id="@+id/appTitleText"
        android:layout_width="329dp"
        android:layout_height="122dp"
        android:gravity="center|center_horizontal|center_vertical"
        android:text="@string/appTitleText"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textColor="#E1000000"
        android:textColorHint="#00BCD4"
        android:textDirection="inherit"
        android:textSize="96sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/constraintLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.634"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.509" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="413dp"
        android:layout_height="105dp"
        android:background="#000000"
        android:backgroundTint="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <Button
            android:id="@+id/registerButton"
            android:layout_width="160dp"
            android:layout_height="60dp"
            android:backgroundTint="#000000"
            android:text="@string/registerButtonText"
            android:textColor="#FFFFFF"
            app:layout_constraintBottom_toBottomOf="@+id/loginButton"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.936"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/loginButton"
            app:layout_constraintVertical_bias="0.0" />

        <Button
            android:id="@+id/loginButton"
            android:layout_width="160dp"
            android:layout_height="60dp"
            android:backgroundTint="#FFFFFF"
            android:foregroundTint="#FFFFFF"
            android:text="@string/loginButtonText"
            android:textColor="#000000"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.114"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.488" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/creditsText"
        android:textColor="#646464"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/constraintLayout"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>