<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/constraintLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:backgroundTint="#FFFFFF"
    tools:context=".LoginActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:backgroundTint="#FFFFFF"
        android:orientation="vertical">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/ViewTitleLayout"
            android:layout_width="414dp"
            android:layout_height="76dp"
            android:layout_marginTop="72dp"
            android:backgroundTint="#FFFFFF">

            <ImageView
                android:id="@+id/nftLogo2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="24dp"
                app:layout_constraintBottom_toBottomOf="@+id/loginViewTitle"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.043"
                app:layout_constraintStart_toEndOf="@+id/loginViewTitle"
                app:layout_constraintTop_toTopOf="@+id/loginViewTitle"
                app:layout_constraintVertical_bias="0.333"
                app:srcCompat="@drawable/nft" />

            <TextView
                android:id="@+id/loginViewTitle"
                android:layout_width="wrap_content"
                android:layout_height="58dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:text="@string/loginButtonText"
                android:textColor="#000000"
                android:textSize="40sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <EditText
            android:id="@+id/loginUsernameEdit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/userNameHint"
            android:inputType="textPersonName"
            android:minHeight="48dp" />

        <EditText
            android:id="@+id/passwordEdit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/passwordHint"
            android:inputType="textPersonName|textPassword"
            android:minHeight="48dp" />

        <Button
            android:id="@+id/loginViewButton"
            android:layout_width="match_parent"
            android:layout_height="64dp"
            android:backgroundTint="#000000"
            android:text="@string/loginButtonText" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>